2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-notebook.c: (notebook_drag_data_received_cb),
	(ephy_notebook_init), (build_tab_label):

	Allow to drag plaintext to tabbar. Bug #339339, patch by
	Michael Hofmann.

2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_set_completion):
	* lib/widgets/ephy-location-entry.h:
	* src/ephy-completion-model.c:
	(ephy_completion_model_get_column_type),
	(ephy_completion_model_get_value):
	* src/ephy-completion-model.h:
	* src/ephy-location-action.c: (connect_proxy):

	List title and URL in location entry drop-down. Bug #169550,
	patch by Diego Escalante Urrelo.

2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_style_set):

	Fix secure location bar colouring with dark themes. Bug #347343,
	patch by Diego Escalante Urrelo.

2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* src/Makefile.am:
	* src/window-commands.c: (window_cmd_help_about):
	
	Load about data from file.

2006-12-17  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/ephy-adblock-manager.c:
	* embed/ephy-adblock-manager.h:

	Add a signal so one can react after some rules have been edited.

2006-12-17  Björn Lindqvist  <bjourne@gmail.com>

	* embed/ephy-encodings.c
	* embed/ephy-favicon-cache.c
	* embed/ephy-history.c
	* embed/mozilla/GlobalHistory.cpp
	* lib/ephy-state.c
	* lib/widgets/ephy-node-view.c
	* src/ephy-tab.c
	* src/bookmarks/ephy-bookmarks.c

	Refactor lots of code by using the function
	ephy_node_set_property_XXX() instead of
	ephy_node_set_property(). Also, add emacs mode headers to touched
	files. Bug #381546.
 	
2006-12-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp: