@@ -1,5 +1,12 @@
 2006-12-17  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-notebook.c: (ephy_notebook_init), (sync_label):
+
+	Limit tab tooltip length. Bug #324052, patch by Diego Escalante
+	Urrelo.
+
+2006-12-17  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-notebook.c: (notebook_drag_data_received_cb),
 	(ephy_notebook_init), (build_tab_label):
 
